<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">HelloLayouts</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="titulo">Título Centrado</string>
	<string name="nombre">Nombre de usuario</string>
	<string name="contentImage">Título Centrado</string>
	<string name="status">Descripción del estado del usuario que ocupa dos o tres lineas completas</string>
	<string name="bt1">Ver perfil</string>
	<string name="bt2">Cargar Info</string>
	<string name="bt3">Actualizar</string>
	<string name="localizame">Localizame</string>
	<string name="textolargo">Este es un ejemplo de texto largo encapsulado en un textview en modo marquesina</string>
	
</resources>