<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/relative_main"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:background="#0000ff"
    >
	    <TextView 
	    	android:id="@+id/main"
	    	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/titulo"
			android:gravity="center"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:textColor="#000000"
	    />
    	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/lay_user"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:background="#00ff00"
    	android:layout_below="@id/main"
    		
    	>
    		<ImageView 
    			android:id="@+id/imgUser"
    			android:contentDescription="@string/contentImage"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/user"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip"
    		/>
    		<TextView 
    			android:id="@+id/name"
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/nombre"
				android:layout_toRightOf="@+id/imgUser"
				android:layout_marginTop="10dip"
				android:gravity="center"
				android:textColor="#000000"
    		/>
    		<TextView 
    			android:id="@+id/status2"
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/status"
				android:layout_toRightOf="@+id/imgUser"
				android:layout_below="@+id/name"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="10dip"
				android:maxLines="3"
				android:textColor="#000000"
    		/>	
    	</RelativeLayout>
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:id="@+id/lay_buttons"
	    	android:layout_below="@+id/lay_user"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	    	android:background="#00fff0"
	    	android:orientation="vertical"	
    	>
    		<Button 
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/bt1"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
    		/>
    		<Button 
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/bt2"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
    		/>
    		<Button 
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/bt3"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="10dip"
				android:id="@+id/btActualizar"
    		/>
    	</LinearLayout>
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:id="@+id/lay_map"
	    	android:layout_below="@+id/lay_user"
	    	android:layout_toRightOf="@+id/lay_buttons"
	    	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
	    	android:background="#455400"
	    	android:orientation="vertical"	
	    >
    		<ImageView
    			android:id="@+id/imgMap"
    			android:contentDescription="@string/contentImage"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/maps"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip"
				android:layout_gravity="center"
				 />
    		<Button 
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/localizame"
				android:layout_marginTop="10dip"
				android:layout_gravity="center"
				android:layout_marginBottom="10dip"
				android:id="@+id/btLocalizame"
    		/>
    	</LinearLayout>
	    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:id="@+id/lay_foo"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:layout_below="@+id/lay_map"
	    	android:background="#435320"
	    >
	   		<TextView 
	   			android:id="@+id/tvSessionInfo"
		    	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/textolargo"
				android:textColor="#ff0000"
				android:layout_centerVertical="true"
				android:singleLine="true"
				android:ellipsize="marquee"
				android:textStyle="bold"
				android:layout_alignParentBottom="true"
	   		 />	
	  		
	  	 </RelativeLayout>

    		
    		
    	
    	
    	
    </RelativeLayout>
	
	

</ScrollView>